--- a/frontend/src/styles/TaskModal.css
+++ b/frontend/src/styles/TaskModal.css
@@ -17,7 +17,7 @@
     padding: 3rem;
     padding-bottom: 1rem;
     border-radius: 1rem;
-    min-width: 30vw;
+    min-width: 40vw;
     color: white;
 }
 
