--- a/frontend/src/styles/ViewModal.css
+++ b/frontend/src/styles/ViewModal.css
@@ -6,7 +6,7 @@
     transform: translate(-50%, -50%);
     padding: 3rem;
     border-radius: 1rem;
-    min-width: 30vw;
+    min-width: 40vw;
     font-family: "primary-font", "Courier New", Courier, monospace;
     color: white;
 }
